deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mob
  labels:
    app.kubernetes.io/name: mob
